--- a/package.json
+++ b/package.json
@@ -11,11 +11,11 @@
   "devDependencies": {
     "@types/node": "^11.10.4",
     "cheerio": "^1.0.0-rc.2",
-    "typescript": "^3.3.3333",
-    "xml2json": "^0.11.2"
+    "typescript": "^3.3.3333"
   },
   "dependencies": {
     "@types/cheerio": "^0.22.11",
-    "iconv-lite": "^0.4.24"
+    "iconv-lite": "^0.4.24",
+    "zip-local": "^0.3.4"
   }
 }
