--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   },
   "dependencies": {
     "@types/cheerio": "^0.22.11",
+    "@types/clean-css": "^4.2.0",
+    "clean-css": "^4.2.1",
     "iconv-lite": "^0.4.24",
     "zip-local": "^0.3.4"
   }
